# analemmatic

./: README.md  pyproject.toml
analemmatic/: solartime.py  sun.py  sundial.py
