[tool.poetry]
name = "analemmatic"
version = "0.1.0"
description = "Analemmatic sundial generator"
authors = ["Patrick Toale <ptoale@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
astropy = "^5.1.1"
pytz = "^2022.6"
matplotlib = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
